# ezmodes-esp-one-button-widgets

./: .gitignore  CMakeLists.txt  LICENSE  README.md  idf_component.yml
.github/: copilot-instructions.md
agent/: design.md
examples/basic/: CMakeLists.txt  main.cpp
examples/basic/main/: idf_component.yml  main.cpp
host_test/: CMakeLists.txt  test_main.cpp  test_widgets.cpp
host_test/stubs/: esp_lvgl_port.h  lvgl.h
include/ezmodes/ui/: inline_menu.hpp  menu.hpp  menu_config.hpp  menu_controller.hpp  mode_selection_service.hpp  widget.hpp
include/ezmodes/ui/widgets/: action_widget.hpp  info_screen_widget.hpp  spinner_widget.hpp  submenu_widget.hpp  toggle_widget.hpp
src/: inline_menu.cpp  menu.cpp  menu_controller.cpp  mode_selection_service.cpp
src/widgets/: action_widget.cpp  info_screen_widget.cpp  spinner_widget.cpp  submenu_widget.cpp  toggle_widget.cpp
